fixed some project files

--- a/res/plugin.yml
+++ b/res/plugin.yml
@@ -3,15 +3,17 @@
 # https://www.spigotmc.org/resources/book-lecterns.36689/ # 
 #                                                         # 
 
-main: LecternPlugin
+main: me.cynadyde.booklecterns.LecternPlugin
 name: BookLecterns
 prefix: BookLects
 version: 1.4
 api-version: 1.12
-description: remotely view books through a multi-block structure
-author: zynadyde (February, 2017)
+description: Remotely view books through a multi-block structure.
 website: https://www.spigotmc.org/resources/book-lecterns.36689/
-depend: [ProtocolLib]
+authors:
+  - Cynadyde (February, 2017)
+depend:
+  - ProtocolLib
 commands:
     lecterns:
         usage: "/lecterns"
