--- a/res/plugin.yml
+++ b/res/plugin.yml
@@ -6,8 +6,7 @@
 main: me.cynadyde.booklecterns.LecternPlugin
 name: BookLecterns
 prefix: BookLects
-version: 1.4
-api-version: 1.12
+version: 1.12.2-03
 description: Remotely view books through a multi-block structure.
 website: https://www.spigotmc.org/resources/book-lecterns.36689/
 authors:
